RESOLVED FIXED126248
Fix build error on 64bit debug build
https://bugs.webkit.org/show_bug.cgi?id=126248
Summary Fix build error on 64bit debug build
Gyuyoung Kim
Reported 2013-12-26 16:22:06 PST
r161076 used ‘%lli’(for long long int) for int64_t(aka long int). However, in a 64bit compile, int64_t is 'long int', not a 'long long int'. To support both 32bit and 64bit, we use static_cast<long long>.
Attachments
Patch (2.23 KB, patch)
2013-12-26 16:23 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2013-12-26 16:23:19 PST
Martin Robinson
Comment 2 2013-12-26 16:26:54 PST
Gyuyoung Kim
Comment 3 2013-12-26 16:45:16 PST
(In reply to comment #2) > (From update of attachment 220038 [details]) > Is it possible to use PRId64 here ala http://stackoverflow.com/questions/9225567/how-to-print-a-int64-t-type-in-c ? I'm not sure if this can be supported by MSVC as well. Besides we may include <inttypes.h> to use it. It seems to me current is better for all platforms.
WebKit Commit Bot
Comment 4 2013-12-29 16:29:34 PST
Comment on attachment 220038 [details] Patch Rejecting attachment 220038 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 220038, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/5672591746400256
Gyuyoung Kim
Comment 5 2013-12-29 16:36:31 PST
Comment on attachment 220038 [details] Patch Clearing flags on attachment: 220038 Committed r161133: <http://trac.webkit.org/changeset/161133>
Gyuyoung Kim
Comment 6 2013-12-29 16:36:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.