Fix build error on 64bit debug build. https://bugs.webkit.org/show_bug.cgi?id=126248

r161076 used ‘%lli’(for long long int) for int64_t(aka long int).
However, in a 64bit compile, int64_t is 'long int', not a 'long long int'.
To support 32bit and 64bit, we use static_cast<long long>.

* Modules/indexeddb/IDBTransactionBackend.cpp:
(WebCore::IDBTransactionBackend::commit):

Canonical link: https://commits.webkit.org/144219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161133 268f45cc-cd09-0410-ab3c-d52691b4dbfc